fixed my syles and added dark modes

--- a/src/assets/scss/_design.scss
+++ b/src/assets/scss/_design.scss
@@ -606,7 +606,7 @@ ul {
 ****************************/
 
 .react-header {
-    background: $whiteColor;
+    background: var(--background-color);
     position: relative;
     z-index: 9999;
 
